Made some headway on the routers php script.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ css?family=Roboto:400,100,300,500,700,900,100italic,400italic,300italic' rel='st
 		<div class="row">
 
 			<div class="column grid_6 server-select">
-				<h3>Servers: <span>(click to toggle)</h3>
+				<h3>Servers: <span>(click to toggle)</span></h3>
 				<div class="box-selector on" id="canit">
 					<h4>CanIt</h4><p>(Spam Filtering)</p>
 					<div class="status-indicator"></div>
