Worked on alternate UI for logs/canit links.

--- a/index.html
+++ b/index.html
@@ -233,7 +233,12 @@ css?family=Roboto:400,100,300,500,700,900,100italic,400italic,300italic' rel='st
 		</tbody>
 	</table>
 
-
+<div id="rowOverlay" style="">
+	<span class="external-link-wrap">
+	<a href="#" id ="viewLogs">View Logs</a>
+	<a href="#">Open in CanIt</a>
+	</span>
+</div>
 	<!-- End Results Table -->
 </div>
 
