Working on the table, got the new hover over effect working.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@ Grep Logs Redesign
 <link href='http://fonts.googleapis.com/
 css?family=Roboto:400,100,300,500,700,900,100italic,400italic,300italic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700' rel='stylesheet' type='text/css'>
-<link href='css/fonts.css' rel='stylesheet' type='text/css'>
 
 
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
@@ -232,6 +231,12 @@ css?family=Roboto:400,100,300,500,700,900,100italic,400italic,300italic' rel='st
 			</tr>
 		</tbody>
 	</table>
+
+<div id="informationSection">
+<p>
+Placeholder
+</p>
+</div>
 
 <div id="rowOverlay" style="">
 	<span class="external-link-wrap">
